--- a/source/index.html
+++ b/source/index.html
@@ -420,8 +420,7 @@
       </ul>
     </div>
   </footer>
-  <script src="pristine/dist/pristine.js"></script>
-  <!-- <script src="https://unpkg.com/imask"></script> -->
+  <script src="pristine/dist/pristine.min.js"></script>
   <script src="js/main.min.js"></script>
 </body>
 
