--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" class="nojs">
 
 <head>
   <meta charset="UTF-8" />
@@ -310,7 +310,7 @@
         <form class="booking__form form js-form" action="https://echo.htmlacademy.ru/" method="get" autocomplete="off">
           <div class="form__input-wrapper">
             <label class="visually-hidden" for="name">Заполните имя</label>
-            <input type="text" name="name" placeholder="Имя" id="name" required
+            <input type="text" class=name" name="name" placeholder="Имя" id="name" required
               data-pristine-required-message="Обязательное поле">
           </div>
 
@@ -420,7 +420,7 @@
       </ul>
     </div>
   </footer>
-  <script src="pristine/dist/pristine.min.js"></script>
+  <script src="pristine/pristine.min.js" type="text/javascript"></script>
   <script src="js/main.min.js"></script>
 </body>
 
