--- a/index.html
+++ b/index.html
@@ -15,12 +15,9 @@
 
 <body>
   <header class="header">
-    <div class="header__background">
-    </div>
     <div class="header__wrapper">
       <div class="header__logo logo">
         <a class="logo__link" href="#">
-          <!-- <img class="logo__img" src="./img/svg/logo.svg" width="70" height="38" alt="Логотип круизов в Антарктику."> -->
           <svg class="logo__img" width="70" height="38" viewBox="0 0 70 38" aria-label="Логотип круизов в Антарктику.">
             <use xlink:href="./img/sprite/sprite.svg#logo"></use>
           </svg>
@@ -68,7 +65,10 @@
           несколько видов пингвинов, китов, морских котиков и&nbsp;многое другое. </p>
       </div>
       <div class="info__img-wrapper">
-        <img class="info__img" src="./img/penguin.jpg" width="560" height="301" alt="Пингвины.">
+        <picture>
+          <source type="image/webp" srcset="./img/penguin.webp, ./img/penguin@2.webp 2x ">
+          <img class="info__img" src="./img/penguin.jpg" width="560" height="301" alt="Пингвины.">
+        </picture>
       </div>
     </section>
 
@@ -87,9 +87,9 @@
           <svg width="38" height="32" viewBox="0 0 38 32">
             <use xlink:href="./img/sprite/sprite.svg#check"></use>
           </svg>
-          <h3>Система все включено</h3>
+          <h3>Система все&nbsp;включено</h3>
           <p>Все наши круизы работают по системе &ldquo;Все Включено&rdquo;. Великолепные блюда
-            и&nbsp;безлимитный бар доступны для вас 24 часа.</p>
+            и&nbsp;безлимитный бар доступны для&nbsp;вас 24 часа.</p>
         </li>
         <li class="advantages__item advantages__item--different">
           <svg width="44" height="32" viewBox="0 0 44 32">
@@ -108,7 +108,10 @@
         <li class="catalog__item card">
           <h3>Круиз “Астория”</h3>
           <div class="card__preview">
-            <img src="./img/astoria.jpg" width="260" height="386" alt="Горы.">
+            <picture>
+              <source type="image/webp" srcset="./img/astoria.webp, ./img/astoria@2.webp 2x ">
+              <img src="./img/astoria.jpg" width="260" height="386" alt="Горы.">
+            </picture>
           </div>
           <div class="card__content">
             <p>Круиз “Астория”</p>
@@ -132,7 +135,10 @@
         <li class="catalog__item card">
           <h3>Круиз “Элайн”</h3>
           <div class="card__preview">
-            <img src="./img/minion.jpg" width="260" height="386" alt="Вода и лед.">
+            <picture>
+              <source type="image/webp" srcset="./img/minion.webp, ./img/minion@2.webp 2x ">
+              <img src="./img/minion.jpg" width="260" height="386" alt="Вода и лед.">
+            </picture>
           </div>
           <div class="card__content">
             <p>Круиз “Элайн”</p>
@@ -156,7 +162,10 @@
         <li class="catalog__item card">
           <h3>Круиз "Атлантис"</h3>
           <div class="card__preview">
-            <img src="./img/atlantis.jpg" width="260" height="386" alt="Вода и айсберги.">
+            <picture>
+              <source type="image/webp" srcset="./img/atlantis.webp, ./img/atlantis@2.webp 2x ">
+              <img src="./img/atlantis.jpg" width="260" height="386" alt="Вода и айсберги.">
+            </picture>
           </div>
           <div class="card__content">
             <p>Круиз "Атлантис"</p>
@@ -180,7 +189,10 @@
         <li class="catalog__item card">
           <h3>Круиз "Одиссей"</h3>
           <div class="card__preview">
-            <img src="./img/odisey.jpg" width="260" height="386" alt="Вода и горы.">
+            <picture>
+              <source type="image/webp" srcset="./img/odisey.webp, ./img/odisey@2.webp 2x ">
+              <img src="./img/odisey.jpg" width="260" height="386" alt="Вода и горы.">
+            </picture>
           </div>
           <div class="card__content">
             <p>Круиз "Одиссей"</p>
@@ -204,7 +216,10 @@
         <li class="catalog__item card">
           <h3>Круиз "Олимпия"</h3>
           <div class="card__preview">
-            <img src="./img/olimpia.jpg" width="260" height="386" alt="Лед и пингвины.">
+            <picture>
+              <source type="image/webp" srcset="./img/olimpia.webp, ./img/olimpia@2.webp 2x ">
+              <img src="./img/olimpia.jpg" width="260" height="386" alt="Лед и пингвины.">
+            </picture>
           </div>
           <div class="card__content">
             <p>Круиз "Олимпия"</p>
@@ -228,7 +243,10 @@
         <li class="catalog__item card">
           <h3>Круиз "Аврора"</h3>
           <div class="card__preview">
-            <img src="./img/avrora.jpg" width="260" height="386" alt="Лед и айсберги.">
+            <picture>
+              <source type="image/webp" srcset="./img/avrora.webp, ./img/avrora@2.webp 2x ">
+              <img src="./img/avrora.jpg" width="260" height="386" alt="Лед и айсберги.">
+            </picture>
           </div>
           <div class="card__content">
             <p>Круиз "Аврора"</p>
@@ -252,7 +270,10 @@
         <li class="catalog__item card">
           <h3>Круиз "Леонор"</h3>
           <div class="card__preview">
-            <img src="./img/leonor.jpg" width="260" height="386" alt="Лед и айсберги.">
+            <picture>
+              <source type="image/webp" srcset="./img/leonor.webp, ./img/leonor@2.webp 2x ">
+              <img src="./img/leonor.jpg" width="260" height="386" alt="Лед и айсберги.">
+            </picture>
           </div>
           <div class="card__content">
             <p>Круиз "Леонор"</p>
@@ -276,7 +297,10 @@
         <li class="catalog__item card">
           <h3>Круиз "Минион - 1"</h3>
           <div class="card__preview">
-            <img src="./img/minion.jpg" width="260" height="386" alt="Лед и айсберги.">
+            <picture>
+              <source type="image/webp" srcset="./img/minion.webp, ./img/minion@2.webp 2x ">
+              <img src="./img/minion.jpg" width="260" height="386" alt="Вода и лед.">
+            </picture>
           </div>
           <div class="card__content">
             <p>Круиз "Минион - 1"</p>
@@ -302,15 +326,15 @@
     <section class="booking">
       <div class="booking__order">
         <h2 class="booking__title">Раннее бронирование</h2>
-        <p class="booking__description">Забронируйте тур за 3-6 месяцев
-          до даты выезда и сэкономьте до 50%</p>
+        <p class="booking__description">Забронируйте тур за&nbsp;3&#8209;6&nbsp;месяцев
+          до даты выезда и сэкономьте до&nbsp;50%</p>
       </div>
       <div class="booking__wrapper">
         <p class="booking__text">Оставьте заявку и мы свяжемся с вами в ближайшее время</p>
         <form class="booking__form form js-form" action="https://echo.htmlacademy.ru/" method="get" autocomplete="off">
           <div class="form__input-wrapper">
             <label class="visually-hidden" for="name">Заполните имя</label>
-            <input type="text" class=name" name="name" placeholder="Имя" id="name" required
+            <input type="text" name="name" placeholder="Имя" id="name" required
               data-pristine-required-message="Обязательное поле">
           </div>
 
@@ -355,7 +379,7 @@
               <svg width="18" height="22" viewBox="0 0 18 22">
                 <use xlink:href="./img/sprite/sprite.svg#map"></use>
               </svg>
-              г. Санкт Петербург, ул.&nbsp;Большая Конюшенная, 19/8</a>
+              г. Санкт Петербург, ул.&nbsp;Большая&nbsp;Конюшенная, 19/8</a>
           </div>
           <div class="address__link-wrap">
             <a class="address__link address__link--tel" href="tel:+78002000000">
