--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
   <header class="header">
+    <div class="header__cover-js"></div>
     <div class="header__wrapper">
       <div class="header__logo logo">
         <a class="logo__link" href="#">
