--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="preload" href="./fonts/Montserrat-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="./fonts/Montserrat-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="./fonts/Montserrat-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="icon" href="./img/favicon/favicon-32x32.png">
+  <link rel="icon" href="./img/favicon/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./css/style.min.css" />
   <title>Круизы в Антарктику</title>
 </head>
