--- a/source/index.html
+++ b/source/index.html
@@ -134,7 +134,7 @@
                 <dt>Цена</dt>
                 <dd>от 11500 $</dd>
               </dl>
-              <a class="card__button" href="#"><span>Забронировать</span></a>
+              <a class="card__button" href="#" tabindex="0"><span>Забронировать</span></a>
             </div>
           </li>
 
@@ -161,7 +161,7 @@
                 <dt>Цена</dt>
                 <dd>от 14500 $</dd>
               </dl>
-              <a class="card__button" href="#"><span>Забронировать</span></a>
+              <a class="card__button" href="#" tabindex="0"><span>Забронировать</span></a>
             </div>
           </li>
 
@@ -188,7 +188,7 @@
                 <dt>Цена</dt>
                 <dd>от 14500 $</dd>
               </dl>
-              <a class="card__button" href="#"><span>Забронировать</span></a>
+              <a class="card__button" href="#" tabindex="0"><span>Забронировать</span></a>
             </div>
           </li>
 
@@ -215,7 +215,7 @@
                 <dt>Цена</dt>
                 <dd>от 9700 $</dd>
               </dl>
-              <a class="card__button" href="#"><span>Забронировать</span></a>
+              <a class="card__button" href="#" tabindex="0"><span>Забронировать</span></a>
             </div>
           </li>
 
@@ -242,7 +242,7 @@
                 <dt>Цена</dt>
                 <dd>от 18600 $</dd>
               </dl>
-              <a class="card__button" href="#"><span>Забронировать</span></a>
+              <a class="card__button" href="#" tabindex="0"><span>Забронировать</span></a>
             </div>
           </li>
 
@@ -269,7 +269,7 @@
                 <dt>Цена</dt>
                 <dd>от 11700 $</dd>
               </dl>
-              <a class="card__button" href="#"><span>Забронировать</span></a>
+              <a class="card__button" href="#" tabindex="0"><span>Забронировать</span></a>
             </div>
           </li>
 
@@ -296,7 +296,7 @@
                 <dt>Цена</dt>
                 <dd>от 12500 $</dd>
               </dl>
-              <a class="card__button" href="#"><span>Забронировать</span></a>
+              <a class="card__button" href="#" tabindex="0"><span>Забронировать</span></a>
             </div>
           </li>
 
@@ -323,7 +323,7 @@
                 <dt>Цена</dt>
                 <dd>от 12300 $</dd>
               </dl>
-              <a class="card__button" href="#"><span>Забронировать</span></a>
+              <a class="card__button" href="#" tabindex="0"><span>Забронировать</span></a>
             </div>
           </li>
         </ul>
