--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
 
             <div class="form__input-wrapper">
               <label class="visually-hidden" for="tel">Телефон</label>
-              <input type="tel" name="tel" placeholder="Телефон" id="tel" required
-                data-pristine-required-message="Обязательное поле" pattern="[0-9]{5,20}">
+              <input class="js-input js-input--tel"  type="tel" name="tel" placeholder="Телефон" id="tel" required
+                data-pristine-required-message="Обязательное поле">
             </div>
 
             <div class="form__input-wrapper">
